<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_remote"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hisense.onekeytest.apphost.activity.RemoteActivity">

    <Button
        android:id="@+id/btn_app_back"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_app_back"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:columnCount="4"
        android:rowCount="4">

        <Button
            android:id="@+id/btn_meiti"
            style="@style/style_btn"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/btn_meiti" />

        <Button
            android:id="@+id/btn_game"
            style="@style/style_btn"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/btn_jplay" />

        <Button
            android:id="@+id/btn_app"
            style="@style/style_btn"
            android:layout_column="3"
            android:layout_row="3"
            android:text="@string/btn_juse" />

        <Button
            android:id="@+id/btn_1"
            style="@style/style_btn"
            android:layout_column="0"
            android:layout_row="0"
            android:text="1" />

        <Button
            android:id="@+id/btn_2"
            style="@style/style_btn"
            android:layout_column="1"
            android:layout_row="0"
            android:text="2" />

        <Button
            android:id="@+id/btn_3"
            style="@style/style_btn"
            android:layout_column="2"
            android:layout_row="0"
            android:text="3" />

        <Button
            android:id="@+id/btn_0"
            style="@style/style_btn"
            android:layout_column="3"
            android:layout_gravity=""
            android:layout_row="0"
            android:layout_rowSpan="3"
            android:text="0" />

        <Button
            android:id="@+id/btn_4"
            style="@style/style_btn"
            android:layout_column="0"
            android:layout_row="1"
            android:text="4" />

        <Button
            android:id="@+id/btn_5"
            style="@style/style_btn"
            android:layout_column="1"
            android:layout_row="1"
            android:text="5" />

        <Button
            android:id="@+id/btn_6"
            style="@style/style_btn"
            android:layout_column="2"
            android:layout_row="1"
            android:text="6" />

        <Button
            android:id="@+id/btn_7"
            style="@style/style_btn"
            android:layout_column="0"
            android:layout_row="2"
            android:text="7" />

        <Button
            android:id="@+id/btn_8"
            style="@style/style_btn"
            android:layout_column="1"
            android:layout_row="2"
            android:text="8" />

        <Button
            android:id="@+id/btn_9"
            style="@style/style_btn"
            android:layout_column="2"
            android:layout_row="2"
            android:text="9" />

        <Button
            android:id="@+id/btn_vod"
            style="@style/style_btn"
            android:layout_column="1"
            android:layout_row="3"
            android:text="VOD" />
    </GridLayout>
    
    <ImageButton
        android:id="@+id/btn_up"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:onClick="onClick"
        android:src="@mipmap/up"
        android:layout_gravity="center_horizontal"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <Button
            android:id="@+id/btn_ok"
            android:onClick="onClick"
            android:layout_width="160dp"
            android:text="OK"
            android:textSize="26sp"
            android:layout_height="match_parent" 
            android:layout_centerHorizontal="true"/>
        <ImageButton
            android:id="@+id/btn_left"
            android:onClick="onClick"
            android:layout_width="80dp"
            android:src="@mipmap/left"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/btn_ok"/>
        <ImageButton
            android:id="@+id/btn_right"
            android:layout_width="80dp"
            android:onClick="onClick"
            android:src="@mipmap/right"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/btn_ok"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:src="@mipmap/big2"
            android:scaleType="center"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:id="@+id/btn_small"
            android:onClick="onClick"/>

        <ImageButton
            android:id="@+id/btn_down"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:onClick="onClick"
            android:src="@mipmap/down"
            android:layout_gravity="center_horizontal"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/small2"
            android:id="@+id/btn_big"
            android:onClick="onClick"
            android:scaleType="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="菜单"
            android:id="@+id/btn_cast"
            android:onClick="onClick"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/btn_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_setting"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/btn_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_home"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/btn_back"
            />
    </LinearLayout>
</LinearLayout>
